simple-topes/src/RSTT/Syntax/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from RSTT/Syntax/Par.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pDecl -> Decl                               (1)
	%start_pListDecl -> ListDecl                       (2)
	%start_pShape -> Shape                             (3)
	%start_pPointPattern -> PointPattern               (4)
	%start_pPointConDecl -> PointConDecl               (5)
	%start_pListPointConDecl -> ListPointConDecl       (6)
	%start_pCube -> Cube                               (7)
	%start_pCube1 -> Cube1                             (8)
	%start_pListCube -> ListCube                       (9)
	%start_pTopeRule -> TopeRule                       (10)
	%start_pListTopeRule -> ListTopeRule               (11)
	%start_pRuleName -> RuleName                       (12)
	%start_pSequent -> Sequent                         (13)
	%start_pListSequent -> ListSequent                 (14)
	%start_pCubeContext -> CubeContext                 (15)
	%start_pPointDecl -> PointDecl                     (16)
	%start_pListPointDecl -> ListPointDecl             (17)
	%start_pTopeContext -> TopeContext                 (18)
	%start_pTope -> Tope                               (19)
	%start_pTope1 -> Tope1                             (20)
	%start_pTope2 -> Tope2                             (21)
	%start_pTope3 -> Tope3                             (22)
	%start_pListTope -> ListTope                       (23)
	%start_pPoint -> Point                             (24)
	%start_pListPoint -> ListPoint                     (25)
	String -> L_quoted                                 (26)
	Label -> L_Label                                   (27)
	Var -> L_Var                                       (28)
	Line -> L_Line                                     (29)
	Program -> ListDecl                                (30)
	Decl -> 'cube' Label 'with' '{' ListPointConDecl '}'   (31)
	Decl -> 'tope' Label '(' ListCube ')' 'with' '{' ListTopeRule '}'   (32)
	Decl -> 'shape' Var ':=' Shape                     (33)
	Decl -> 'prove' '{' Sequent '}'                    (34)
	Decl -> 'render' 'latex' Shape                     (35)
	ListDecl ->                                        (36)
	ListDecl -> Decl                                   (37)
	ListDecl -> Decl ';' ListDecl                      (38)
	Shape -> '{' PointPattern ':' Cube '|' Tope '}'    (39)
	PointPattern -> Var                                (40)
	PointPattern -> '⟨' PointPattern ',' PointPattern '⟩'   (41)
	PointConDecl -> 'point' Label                      (42)
	PointConDecl -> 'point' Label '(' ListCube ')'     (43)
	ListPointConDecl ->                                (44)
	ListPointConDecl -> PointConDecl                   (45)
	ListPointConDecl -> PointConDecl ';' ListPointConDecl   (46)
	Cube -> Cube '×' Cube1                             (47)
	Cube -> Cube1                                      (48)
	Cube1 -> '𝟙'                                       (49)
	Cube1 -> Label                                     (50)
	Cube1 -> Var                                       (51)
	Cube1 -> '(' Cube ')'                              (52)
	ListCube -> Cube                                   (53)
	ListCube -> Cube ',' ListCube                      (54)
	TopeRule -> 'rule' RuleName 'where' '{' ListSequent Line ';' Sequent '}'   (55)
	ListTopeRule ->                                    (56)
	ListTopeRule -> TopeRule                           (57)
	ListTopeRule -> TopeRule ';' ListTopeRule          (58)
	RuleName -> String                                 (59)
	Sequent -> CubeContext '|' TopeContext '⊢' Tope    (60)
	ListSequent ->                                     (61)
	ListSequent -> Sequent                             (62)
	ListSequent -> Sequent ';' ListSequent             (63)
	CubeContext -> '⋅'                                 (64)
	CubeContext -> ListPointDecl                       (65)
	PointDecl -> Var ':' Cube                          (66)
	ListPointDecl -> PointDecl                         (67)
	ListPointDecl -> PointDecl ',' ListPointDecl       (68)
	TopeContext -> '⋅'                                 (69)
	TopeContext -> ListTope                            (70)
	Tope -> '⊤'                                        (71)
	Tope -> '⊥'                                        (72)
	Tope -> Tope '⇒' Tope1                             (73)
	Tope -> Tope1                                      (74)
	Tope1 -> Tope1 '∨' Tope2                           (75)
	Tope1 -> Tope2                                     (76)
	Tope2 -> Tope2 '∧' Tope3                           (77)
	Tope2 -> Tope3                                     (78)
	Tope3 -> Point '≡' Point                           (79)
	Tope3 -> Label '(' ListPoint ')'                   (80)
	Tope3 -> Var                                       (81)
	Tope3 -> '(' Tope ')'                              (82)
	ListTope -> Tope                                   (83)
	ListTope -> Tope ',' ListTope                      (84)
	Point -> '⋆'                                       (85)
	Point -> '⟨' Point ',' Point '⟩'                   (86)
	Point -> 'π₁' '(' Point ')'                        (87)
	Point -> 'π₂' '(' Point ')'                        (88)
	Point -> Label '(' ListPoint ')'                   (89)
	Point -> Label                                     (90)
	Point -> Var                                       (91)
	ListPoint -> Point                                 (92)
	ListPoint -> Point ',' ListPoint                   (93)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'('            { PT _ (TS _ 1) }
	')'            { PT _ (TS _ 2) }
	','            { PT _ (TS _ 3) }
	':'            { PT _ (TS _ 4) }
	':='           { PT _ (TS _ 5) }
	';'            { PT _ (TS _ 6) }
	'cube'         { PT _ (TS _ 7) }
	'latex'        { PT _ (TS _ 8) }
	'point'        { PT _ (TS _ 9) }
	'prove'        { PT _ (TS _ 10) }
	'render'       { PT _ (TS _ 11) }
	'rule'         { PT _ (TS _ 12) }
	'shape'        { PT _ (TS _ 13) }
	'tope'         { PT _ (TS _ 14) }
	'where'        { PT _ (TS _ 15) }
	'with'         { PT _ (TS _ 16) }
	'{'            { PT _ (TS _ 17) }
	'|'            { PT _ (TS _ 18) }
	'}'            { PT _ (TS _ 19) }
	'×'            { PT _ (TS _ 20) }
	'π₁'           { PT _ (TS _ 21) }
	'π₂'           { PT _ (TS _ 22) }
	'⇒'            { PT _ (TS _ 23) }
	'∧'            { PT _ (TS _ 24) }
	'∨'            { PT _ (TS _ 25) }
	'≡'            { PT _ (TS _ 26) }
	'⊢'            { PT _ (TS _ 27) }
	'⊤'            { PT _ (TS _ 28) }
	'⊥'            { PT _ (TS _ 29) }
	'⋅'            { PT _ (TS _ 30) }
	'⋆'            { PT _ (TS _ 31) }
	'⟨'            { PT _ (TS _ 32) }
	'⟩'            { PT _ (TS _ 33) }
	'𝟙'            { PT _ (TS _ 34) }
	L_quoted       { PT _ (TL $$) }
	L_Label        { PT _ (T_Label $$) }
	L_Var          { PT _ (T_Var $$) }
	L_Line         { PT _ (T_Line $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pDecl    rule  1
	%start_pListDecl rule  2
	%start_pShape   rule  3
	%start_pPointPattern rule  4
	%start_pPointConDecl rule  5
	%start_pListPointConDecl rule  6
	%start_pCube    rule  7
	%start_pCube1   rule  8
	%start_pListCube rule  9
	%start_pTopeRule rule  10
	%start_pListTopeRule rule  11
	%start_pRuleName rule  12
	%start_pSequent rule  13
	%start_pListSequent rule  14
	%start_pCubeContext rule  15
	%start_pPointDecl rule  16
	%start_pListPointDecl rule  17
	%start_pTopeContext rule  18
	%start_pTope    rule  19
	%start_pTope1   rule  20
	%start_pTope2   rule  21
	%start_pTope3   rule  22
	%start_pListTope rule  23
	%start_pPoint   rule  24
	%start_pListPoint rule  25
	String          rule  26
	Label           rule  27
	Var             rule  28
	Line            rule  29
	Program         rule  30
	Decl            rules 31, 32, 33, 34, 35
	ListDecl        rules 36, 37, 38
	Shape           rule  39
	PointPattern    rules 40, 41
	PointConDecl    rules 42, 43
	ListPointConDecl rules 44, 45, 46
	Cube            rules 47, 48
	Cube1           rules 49, 50, 51, 52
	ListCube        rules 53, 54
	TopeRule        rule  55
	ListTopeRule    rules 56, 57, 58
	RuleName        rule  59
	Sequent         rule  60
	ListSequent     rules 61, 62, 63
	CubeContext     rules 64, 65
	PointDecl       rule  66
	ListPointDecl   rules 67, 68
	TopeContext     rules 69, 70
	Tope            rules 71, 72, 73, 74
	Tope1           rules 75, 76
	Tope2           rules 77, 78
	Tope3           rules 79, 80, 81, 82
	ListTope        rules 83, 84
	Point           rules 85, 86, 87, 88, 89, 90, 91
	ListPoint       rules 92, 93

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	'cube'         shift, and enter state 94
	'prove'        shift, and enter state 95
	'render'       shift, and enter state 96
	'shape'        shift, and enter state 97
	'tope'         shift, and enter state 98
	%eof           reduce using rule 36

	Program        goto state 100
	Decl           goto state 92
	ListDecl       goto state 101

State 1

	%start_pDecl -> . Decl                              (rule 1)

	'cube'         shift, and enter state 94
	'prove'        shift, and enter state 95
	'render'       shift, and enter state 96
	'shape'        shift, and enter state 97
	'tope'         shift, and enter state 98

	Decl           goto state 99

State 2

	%start_pListDecl -> . ListDecl                      (rule 2)

	'cube'         shift, and enter state 94
	'prove'        shift, and enter state 95
	'render'       shift, and enter state 96
	'shape'        shift, and enter state 97
	'tope'         shift, and enter state 98
	%eof           reduce using rule 36

	Decl           goto state 92
	ListDecl       goto state 93

State 3

	%start_pShape -> . Shape                            (rule 3)

	'{'            shift, and enter state 91

	Shape          goto state 90

State 4

	%start_pPointPattern -> . PointPattern              (rule 4)

	'⟨'            shift, and enter state 89
	L_Var          shift, and enter state 37

	Var            goto state 87
	PointPattern   goto state 88

State 5

	%start_pPointConDecl -> . PointConDecl              (rule 5)

	'point'        shift, and enter state 85

	PointConDecl   goto state 86

State 6

	%start_pListPointConDecl -> . ListPointConDecl      (rule 6)

	'point'        shift, and enter state 85
	%eof           reduce using rule 44

	PointConDecl   goto state 83
	ListPointConDeclgoto state 84

State 7

	%start_pCube -> . Cube                              (rule 7)

	'('            shift, and enter state 79
	'𝟙'            shift, and enter state 80
	L_Label        shift, and enter state 36
	L_Var          shift, and enter state 37

	Label          goto state 74
	Var            goto state 75
	Cube           goto state 82
	Cube1          goto state 77

State 8

	%start_pCube1 -> . Cube1                            (rule 8)

	'('            shift, and enter state 79
	'𝟙'            shift, and enter state 80
	L_Label        shift, and enter state 36
	L_Var          shift, and enter state 37

	Label          goto state 74
	Var            goto state 75
	Cube1          goto state 81

State 9

	%start_pListCube -> . ListCube                      (rule 9)

	'('            shift, and enter state 79
	'𝟙'            shift, and enter state 80
	L_Label        shift, and enter state 36
	L_Var          shift, and enter state 37

	Label          goto state 74
	Var            goto state 75
	Cube           goto state 76
	Cube1          goto state 77
	ListCube       goto state 78

State 10

	%start_pTopeRule -> . TopeRule                      (rule 10)

	'rule'         shift, and enter state 72

	TopeRule       goto state 73

State 11

	%start_pListTopeRule -> . ListTopeRule              (rule 11)

	'rule'         shift, and enter state 72
	%eof           reduce using rule 56

	TopeRule       goto state 70
	ListTopeRule   goto state 71

State 12

	%start_pRuleName -> . RuleName                      (rule 12)

	L_quoted       shift, and enter state 27

	String         goto state 68
	RuleName       goto state 69

State 13

	%start_pSequent -> . Sequent                        (rule 13)

	'⋅'            shift, and enter state 63
	L_Var          shift, and enter state 37

	Var            goto state 57
	Sequent        goto state 67
	CubeContext    goto state 66
	PointDecl      goto state 58
	ListPointDecl  goto state 62

State 14

	%start_pListSequent -> . ListSequent                (rule 14)

	'⋅'            shift, and enter state 63
	L_Var          shift, and enter state 37
	%eof           reduce using rule 61

	Var            goto state 57
	Sequent        goto state 64
	ListSequent    goto state 65
	CubeContext    goto state 66
	PointDecl      goto state 58
	ListPointDecl  goto state 62

State 15

	%start_pCubeContext -> . CubeContext                (rule 15)

	'⋅'            shift, and enter state 63
	L_Var          shift, and enter state 37

	Var            goto state 57
	CubeContext    goto state 61
	PointDecl      goto state 58
	ListPointDecl  goto state 62

State 16

	%start_pPointDecl -> . PointDecl                    (rule 16)

	L_Var          shift, and enter state 37

	Var            goto state 57
	PointDecl      goto state 60

State 17

	%start_pListPointDecl -> . ListPointDecl            (rule 17)

	L_Var          shift, and enter state 37

	Var            goto state 57
	PointDecl      goto state 58
	ListPointDecl  goto state 59

State 18

	%start_pTopeContext -> . TopeContext                (rule 18)

	'('            shift, and enter state 47
	'π₁'           shift, and enter state 32
	'π₂'           shift, and enter state 33
	'⊤'            shift, and enter state 48
	'⊥'            shift, and enter state 49
	'⋅'            shift, and enter state 56
	'⋆'            shift, and enter state 34
	'⟨'            shift, and enter state 35
	L_Label        shift, and enter state 36
	L_Var          shift, and enter state 37

	Label          goto state 39
	Var            goto state 40
	TopeContext    goto state 54
	Tope           goto state 41
	Tope1          goto state 42
	Tope2          goto state 43
	Tope3          goto state 44
	ListTope       goto state 55
	Point          goto state 46

State 19

	%start_pTope -> . Tope                              (rule 19)

	'('            shift, and enter state 47
	'π₁'           shift, and enter state 32
	'π₂'           shift, and enter state 33
	'⊤'            shift, and enter state 48
	'⊥'            shift, and enter state 49
	'⋆'            shift, and enter state 34
	'⟨'            shift, and enter state 35
	L_Label        shift, and enter state 36
	L_Var          shift, and enter state 37

	Label          goto state 39
	Var            goto state 40
	Tope           goto state 53
	Tope1          goto state 42
	Tope2          goto state 43
	Tope3          goto state 44
	Point          goto state 46

State 20

	%start_pTope1 -> . Tope1                            (rule 20)

	'('            shift, and enter state 47
	'π₁'           shift, and enter state 32
	'π₂'           shift, and enter state 33
	'⋆'            shift, and enter state 34
	'⟨'            shift, and enter state 35
	L_Label        shift, and enter state 36
	L_Var          shift, and enter state 37

	Label          goto state 39
	Var            goto state 40
	Tope1          goto state 52
	Tope2          goto state 43
	Tope3          goto state 44
	Point          goto state 46

State 21

	%start_pTope2 -> . Tope2                            (rule 21)

	'('            shift, and enter state 47
	'π₁'           shift, and enter state 32
	'π₂'           shift, and enter state 33
	'⋆'            shift, and enter state 34
	'⟨'            shift, and enter state 35
	L_Label        shift, and enter state 36
	L_Var          shift, and enter state 37

	Label          goto state 39
	Var            goto state 40
	Tope2          goto state 51
	Tope3          goto state 44
	Point          goto state 46

State 22

	%start_pTope3 -> . Tope3                            (rule 22)

	'('            shift, and enter state 47
	'π₁'           shift, and enter state 32
	'π₂'           shift, and enter state 33
	'⋆'            shift, and enter state 34
	'⟨'            shift, and enter state 35
	L_Label        shift, and enter state 36
	L_Var          shift, and enter state 37

	Label          goto state 39
	Var            goto state 40
	Tope3          goto state 50
	Point          goto state 46

State 23

	%start_pListTope -> . ListTope                      (rule 23)

	'('            shift, and enter state 47
	'π₁'           shift, and enter state 32
	'π₂'           shift, and enter state 33
	'⊤'            shift, and enter state 48
	'⊥'            shift, and enter state 49
	'⋆'            shift, and enter state 34
	'⟨'            shift, and enter state 35
	L_Label        shift, and enter state 36
	L_Var          shift, and enter state 37

	Label          goto state 39
	Var            goto state 40
	Tope           goto state 41
	Tope1          goto state 42
	Tope2          goto state 43
	Tope3          goto state 44
	ListTope       goto state 45
	Point          goto state 46

State 24

	%start_pPoint -> . Point                            (rule 24)

	'π₁'           shift, and enter state 32
	'π₂'           shift, and enter state 33
	'⋆'            shift, and enter state 34
	'⟨'            shift, and enter state 35
	L_Label        shift, and enter state 36
	L_Var          shift, and enter state 37

	Label          goto state 28
	Var            goto state 29
	Point          goto state 38

State 25

	%start_pListPoint -> . ListPoint                    (rule 25)

	'π₁'           shift, and enter state 32
	'π₂'           shift, and enter state 33
	'⋆'            shift, and enter state 34
	'⟨'            shift, and enter state 35
	L_Label        shift, and enter state 36
	L_Var          shift, and enter state 37

	Label          goto state 28
	Var            goto state 29
	Point          goto state 30
	ListPoint      goto state 31

State 26

	String -> . L_quoted                                (rule 26)

	L_quoted       shift, and enter state 27


State 27

	String -> L_quoted .                                (rule 26)

	'where'        reduce using rule 26
	%eof           reduce using rule 26


State 28

	Point -> Label . '(' ListPoint ')'                  (rule 89)
	Point -> Label .                                    (rule 90)

	'('            shift, and enter state 132
	')'            reduce using rule 90
	','            reduce using rule 90
	';'            reduce using rule 90
	'}'            reduce using rule 90
	'⇒'            reduce using rule 90
	'∧'            reduce using rule 90
	'∨'            reduce using rule 90
	'⊢'            reduce using rule 90
	'⟩'            reduce using rule 90
	L_Line         reduce using rule 90
	%eof           reduce using rule 90


State 29

	Point -> Var .                                      (rule 91)

	')'            reduce using rule 91
	','            reduce using rule 91
	';'            reduce using rule 91
	'}'            reduce using rule 91
	'⇒'            reduce using rule 91
	'∧'            reduce using rule 91
	'∨'            reduce using rule 91
	'⊢'            reduce using rule 91
	'⟩'            reduce using rule 91
	L_Line         reduce using rule 91
	%eof           reduce using rule 91


State 30

	ListPoint -> Point .                                (rule 92)
	ListPoint -> Point . ',' ListPoint                  (rule 93)

	')'            reduce using rule 92
	','            shift, and enter state 131
	%eof           reduce using rule 92


State 31

	%start_pListPoint -> ListPoint .                    (rule 25)

	%eof           accept


State 32

	Point -> 'π₁' . '(' Point ')'                       (rule 87)

	'('            shift, and enter state 130


State 33

	Point -> 'π₂' . '(' Point ')'                       (rule 88)

	'('            shift, and enter state 129


State 34

	Point -> '⋆' .                                      (rule 85)

	')'            reduce using rule 85
	','            reduce using rule 85
	';'            reduce using rule 85
	'}'            reduce using rule 85
	'⇒'            reduce using rule 85
	'∧'            reduce using rule 85
	'∨'            reduce using rule 85
	'≡'            reduce using rule 85
	'⊢'            reduce using rule 85
	'⟩'            reduce using rule 85
	L_Line         reduce using rule 85
	%eof           reduce using rule 85


State 35

	Point -> '⟨' . Point ',' Point '⟩'                  (rule 86)

	'π₁'           shift, and enter state 32
	'π₂'           shift, and enter state 33
	'⋆'            shift, and enter state 34
	'⟨'            shift, and enter state 35
	L_Label        shift, and enter state 36
	L_Var          shift, and enter state 37

	Label          goto state 28
	Var            goto state 29
	Point          goto state 128

State 36

	Label -> L_Label .                                  (rule 27)

	'('            reduce using rule 27
	')'            reduce using rule 27
	','            reduce using rule 27
	';'            reduce using rule 27
	'with'         reduce using rule 27
	'|'            reduce using rule 27
	'}'            reduce using rule 27
	'×'            reduce using rule 27
	'⇒'            reduce using rule 27
	'∧'            reduce using rule 27
	'∨'            reduce using rule 27
	'≡'            reduce using rule 27
	'⊢'            reduce using rule 27
	'⟩'            reduce using rule 27
	L_Line         reduce using rule 27
	%eof           reduce using rule 27


State 37

	Var -> L_Var .                                      (rule 28)

	')'            reduce using rule 28
	','            reduce using rule 28
	':'            reduce using rule 28
	':='           reduce using rule 28
	';'            reduce using rule 28
	'|'            reduce using rule 28
	'}'            reduce using rule 28
	'×'            reduce using rule 28
	'⇒'            reduce using rule 28
	'∧'            reduce using rule 28
	'∨'            reduce using rule 28
	'≡'            reduce using rule 28
	'⊢'            reduce using rule 28
	'⟩'            reduce using rule 28
	L_Line         reduce using rule 28
	%eof           reduce using rule 28


State 38

	%start_pPoint -> Point .                            (rule 24)

	%eof           accept


State 39

	Tope3 -> Label . '(' ListPoint ')'                  (rule 80)
	Point -> Label . '(' ListPoint ')'                  (rule 89)
	Point -> Label .                                    (rule 90)

	'('            shift, and enter state 127
	'≡'            reduce using rule 90


State 40

	Tope3 -> Var .                                      (rule 81)
	Point -> Var .                                      (rule 91)

	')'            reduce using rule 81
	','            reduce using rule 81
	';'            reduce using rule 81
	'}'            reduce using rule 81
	'⇒'            reduce using rule 81
	'∧'            reduce using rule 81
	'∨'            reduce using rule 81
	'≡'            reduce using rule 91
	'⊢'            reduce using rule 81
	L_Line         reduce using rule 81
	%eof           reduce using rule 81


State 41

	Tope -> Tope . '⇒' Tope1                            (rule 73)
	ListTope -> Tope .                                  (rule 83)
	ListTope -> Tope . ',' ListTope                     (rule 84)

	','            shift, and enter state 126
	'⇒'            shift, and enter state 121
	'⊢'            reduce using rule 83
	%eof           reduce using rule 83


State 42

	Tope -> Tope1 .                                     (rule 74)
	Tope1 -> Tope1 . '∨' Tope2                          (rule 75)

	')'            reduce using rule 74
	','            reduce using rule 74
	';'            reduce using rule 74
	'}'            reduce using rule 74
	'⇒'            reduce using rule 74
	'∨'            shift, and enter state 122
	'⊢'            reduce using rule 74
	L_Line         reduce using rule 74
	%eof           reduce using rule 74


State 43

	Tope1 -> Tope2 .                                    (rule 76)
	Tope2 -> Tope2 . '∧' Tope3                          (rule 77)

	')'            reduce using rule 76
	','            reduce using rule 76
	';'            reduce using rule 76
	'}'            reduce using rule 76
	'⇒'            reduce using rule 76
	'∧'            shift, and enter state 123
	'∨'            reduce using rule 76
	'⊢'            reduce using rule 76
	L_Line         reduce using rule 76
	%eof           reduce using rule 76


State 44

	Tope2 -> Tope3 .                                    (rule 78)

	')'            reduce using rule 78
	','            reduce using rule 78
	';'            reduce using rule 78
	'}'            reduce using rule 78
	'⇒'            reduce using rule 78
	'∧'            reduce using rule 78
	'∨'            reduce using rule 78
	'⊢'            reduce using rule 78
	L_Line         reduce using rule 78
	%eof           reduce using rule 78


State 45

	%start_pListTope -> ListTope .                      (rule 23)

	%eof           accept


State 46

	Tope3 -> Point . '≡' Point                          (rule 79)

	'≡'            shift, and enter state 125


State 47

	Tope3 -> '(' . Tope ')'                             (rule 82)

	'('            shift, and enter state 47
	'π₁'           shift, and enter state 32
	'π₂'           shift, and enter state 33
	'⊤'            shift, and enter state 48
	'⊥'            shift, and enter state 49
	'⋆'            shift, and enter state 34
	'⟨'            shift, and enter state 35
	L_Label        shift, and enter state 36
	L_Var          shift, and enter state 37

	Label          goto state 39
	Var            goto state 40
	Tope           goto state 124
	Tope1          goto state 42
	Tope2          goto state 43
	Tope3          goto state 44
	Point          goto state 46

State 48

	Tope -> '⊤' .                                       (rule 71)

	')'            reduce using rule 71
	','            reduce using rule 71
	';'            reduce using rule 71
	'}'            reduce using rule 71
	'⇒'            reduce using rule 71
	'⊢'            reduce using rule 71
	L_Line         reduce using rule 71
	%eof           reduce using rule 71


State 49

	Tope -> '⊥' .                                       (rule 72)

	')'            reduce using rule 72
	','            reduce using rule 72
	';'            reduce using rule 72
	'}'            reduce using rule 72
	'⇒'            reduce using rule 72
	'⊢'            reduce using rule 72
	L_Line         reduce using rule 72
	%eof           reduce using rule 72


State 50

	%start_pTope3 -> Tope3 .                            (rule 22)

	%eof           accept


State 51

	%start_pTope2 -> Tope2 .                            (rule 21)
	Tope2 -> Tope2 . '∧' Tope3                          (rule 77)

	'∧'            shift, and enter state 123
	%eof           accept


State 52

	%start_pTope1 -> Tope1 .                            (rule 20)
	Tope1 -> Tope1 . '∨' Tope2                          (rule 75)

	'∨'            shift, and enter state 122
	%eof           accept


State 53

	%start_pTope -> Tope .                              (rule 19)
	Tope -> Tope . '⇒' Tope1                            (rule 73)

	'⇒'            shift, and enter state 121
	%eof           accept


State 54

	%start_pTopeContext -> TopeContext .                (rule 18)

	%eof           accept


State 55

	TopeContext -> ListTope .                           (rule 70)

	'⊢'            reduce using rule 70
	%eof           reduce using rule 70


State 56

	TopeContext -> '⋅' .                                (rule 69)

	'⊢'            reduce using rule 69
	%eof           reduce using rule 69


State 57

	PointDecl -> Var . ':' Cube                         (rule 66)

	':'            shift, and enter state 120


State 58

	ListPointDecl -> PointDecl .                        (rule 67)
	ListPointDecl -> PointDecl . ',' ListPointDecl      (rule 68)

	','            shift, and enter state 119
	'|'            reduce using rule 67
	%eof           reduce using rule 67


State 59

	%start_pListPointDecl -> ListPointDecl .            (rule 17)

	%eof           accept


State 60

	%start_pPointDecl -> PointDecl .                    (rule 16)

	%eof           accept


State 61

	%start_pCubeContext -> CubeContext .                (rule 15)

	%eof           accept


State 62

	CubeContext -> ListPointDecl .                      (rule 65)

	'|'            reduce using rule 65
	%eof           reduce using rule 65


State 63

	CubeContext -> '⋅' .                                (rule 64)

	'|'            reduce using rule 64
	%eof           reduce using rule 64


State 64

	ListSequent -> Sequent .                            (rule 62)
	ListSequent -> Sequent . ';' ListSequent            (rule 63)

	';'            shift, and enter state 118
	L_Line         reduce using rule 62
	%eof           reduce using rule 62


State 65

	%start_pListSequent -> ListSequent .                (rule 14)

	%eof           accept


State 66

	Sequent -> CubeContext . '|' TopeContext '⊢' Tope    (rule 60)

	'|'            shift, and enter state 117


State 67

	%start_pSequent -> Sequent .                        (rule 13)

	%eof           accept


State 68

	RuleName -> String .                                (rule 59)

	'where'        reduce using rule 59
	%eof           reduce using rule 59


State 69

	%start_pRuleName -> RuleName .                      (rule 12)

	%eof           accept


State 70

	ListTopeRule -> TopeRule .                          (rule 57)
	ListTopeRule -> TopeRule . ';' ListTopeRule         (rule 58)

	';'            shift, and enter state 116
	'}'            reduce using rule 57
	%eof           reduce using rule 57


State 71

	%start_pListTopeRule -> ListTopeRule .              (rule 11)

	%eof           accept


State 72

	TopeRule -> 'rule' . RuleName 'where' '{' ListSequent Line ';' Sequent '}'    (rule 55)

	L_quoted       shift, and enter state 27

	String         goto state 68
	RuleName       goto state 115

State 73

	%start_pTopeRule -> TopeRule .                      (rule 10)

	%eof           accept


State 74

	Cube1 -> Label .                                    (rule 50)

	')'            reduce using rule 50
	','            reduce using rule 50
	'|'            reduce using rule 50
	'×'            reduce using rule 50
	%eof           reduce using rule 50


State 75

	Cube1 -> Var .                                      (rule 51)

	')'            reduce using rule 51
	','            reduce using rule 51
	'|'            reduce using rule 51
	'×'            reduce using rule 51
	%eof           reduce using rule 51


State 76

	Cube -> Cube . '×' Cube1                            (rule 47)
	ListCube -> Cube .                                  (rule 53)
	ListCube -> Cube . ',' ListCube                     (rule 54)

	')'            reduce using rule 53
	','            shift, and enter state 114
	'×'            shift, and enter state 112
	%eof           reduce using rule 53


State 77

	Cube -> Cube1 .                                     (rule 48)

	')'            reduce using rule 48
	','            reduce using rule 48
	'|'            reduce using rule 48
	'×'            reduce using rule 48
	%eof           reduce using rule 48


State 78

	%start_pListCube -> ListCube .                      (rule 9)

	%eof           accept


State 79

	Cube1 -> '(' . Cube ')'                             (rule 52)

	'('            shift, and enter state 79
	'𝟙'            shift, and enter state 80
	L_Label        shift, and enter state 36
	L_Var          shift, and enter state 37

	Label          goto state 74
	Var            goto state 75
	Cube           goto state 113
	Cube1          goto state 77

State 80

	Cube1 -> '𝟙' .                                      (rule 49)

	')'            reduce using rule 49
	','            reduce using rule 49
	'|'            reduce using rule 49
	'×'            reduce using rule 49
	%eof           reduce using rule 49


State 81

	%start_pCube1 -> Cube1 .                            (rule 8)

	%eof           accept


State 82

	%start_pCube -> Cube .                              (rule 7)
	Cube -> Cube . '×' Cube1                            (rule 47)

	'×'            shift, and enter state 112
	%eof           accept


State 83

	ListPointConDecl -> PointConDecl .                  (rule 45)
	ListPointConDecl -> PointConDecl . ';' ListPointConDecl    (rule 46)

	';'            shift, and enter state 111
	'}'            reduce using rule 45
	%eof           reduce using rule 45


State 84

	%start_pListPointConDecl -> ListPointConDecl .      (rule 6)

	%eof           accept


State 85

	PointConDecl -> 'point' . Label                     (rule 42)
	PointConDecl -> 'point' . Label '(' ListCube ')'    (rule 43)

	L_Label        shift, and enter state 36

	Label          goto state 110

State 86

	%start_pPointConDecl -> PointConDecl .              (rule 5)

	%eof           accept


State 87

	PointPattern -> Var .                               (rule 40)

	','            reduce using rule 40
	':'            reduce using rule 40
	'⟩'            reduce using rule 40
	%eof           reduce using rule 40


State 88

	%start_pPointPattern -> PointPattern .              (rule 4)

	%eof           accept


State 89

	PointPattern -> '⟨' . PointPattern ',' PointPattern '⟩'    (rule 41)

	'⟨'            shift, and enter state 89
	L_Var          shift, and enter state 37

	Var            goto state 87
	PointPattern   goto state 109

State 90

	%start_pShape -> Shape .                            (rule 3)

	%eof           accept


State 91

	Shape -> '{' . PointPattern ':' Cube '|' Tope '}'    (rule 39)

	'⟨'            shift, and enter state 89
	L_Var          shift, and enter state 37

	Var            goto state 87
	PointPattern   goto state 108

State 92

	ListDecl -> Decl .                                  (rule 37)
	ListDecl -> Decl . ';' ListDecl                     (rule 38)

	';'            shift, and enter state 107
	%eof           reduce using rule 37


State 93

	%start_pListDecl -> ListDecl .                      (rule 2)

	%eof           accept


State 94

	Decl -> 'cube' . Label 'with' '{' ListPointConDecl '}'    (rule 31)

	L_Label        shift, and enter state 36

	Label          goto state 106

State 95

	Decl -> 'prove' . '{' Sequent '}'                   (rule 34)

	'{'            shift, and enter state 105


State 96

	Decl -> 'render' . 'latex' Shape                    (rule 35)

	'latex'        shift, and enter state 104


State 97

	Decl -> 'shape' . Var ':=' Shape                    (rule 33)

	L_Var          shift, and enter state 37

	Var            goto state 103

State 98

	Decl -> 'tope' . Label '(' ListCube ')' 'with' '{' ListTopeRule '}'    (rule 32)

	L_Label        shift, and enter state 36

	Label          goto state 102

State 99

	%start_pDecl -> Decl .                              (rule 1)

	%eof           accept


State 100

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 101

	Program -> ListDecl .                               (rule 30)

	%eof           reduce using rule 30


State 102

	Decl -> 'tope' Label . '(' ListCube ')' 'with' '{' ListTopeRule '}'    (rule 32)

	'('            shift, and enter state 163


State 103

	Decl -> 'shape' Var . ':=' Shape                    (rule 33)

	':='           shift, and enter state 162


State 104

	Decl -> 'render' 'latex' . Shape                    (rule 35)

	'{'            shift, and enter state 91

	Shape          goto state 161

State 105

	Decl -> 'prove' '{' . Sequent '}'                   (rule 34)

	'⋅'            shift, and enter state 63
	L_Var          shift, and enter state 37

	Var            goto state 57
	Sequent        goto state 160
	CubeContext    goto state 66
	PointDecl      goto state 58
	ListPointDecl  goto state 62

State 106

	Decl -> 'cube' Label . 'with' '{' ListPointConDecl '}'    (rule 31)

	'with'         shift, and enter state 159


State 107

	ListDecl -> Decl ';' . ListDecl                     (rule 38)

	'cube'         shift, and enter state 94
	'prove'        shift, and enter state 95
	'render'       shift, and enter state 96
	'shape'        shift, and enter state 97
	'tope'         shift, and enter state 98
	%eof           reduce using rule 36

	Decl           goto state 92
	ListDecl       goto state 158

State 108

	Shape -> '{' PointPattern . ':' Cube '|' Tope '}'    (rule 39)
